TEST_PROGRAMS/INVALID/15/keyword1.go
package main

func main() {
	var println string = "Don't print me"
	println(println)
}
